--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <section id="home-info" class="bg-dark">
     <div class="info-img"></div>
     <div class="info-content">
-      <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
+      <h2><span class="text-primary">The History</span> Of Cape Town Hotel</h2>
       <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
           aliquam dolor alias iste autem, quaerat magni unde accusantium qui
